--- a/src/app/components/update-zmp/update-zmp.component.html
+++ b/src/app/components/update-zmp/update-zmp.component.html
@@ -1,5 +1,5 @@
 <h2>Editer une zone maritime protégé !</h2>
-<!-- <form [formGroup]="form" (ngSubmit)="onSubmit()"> -->
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <label for="nom">Nom :</label>
   <input type="text" id="nom" formControlName="nom"  required />
 
@@ -13,7 +13,7 @@
   <input type="number" id="longitude" formControlName="longitude"  required />
 
   <button type="submit">Ajouter</button>
-<!-- </form> -->
+</form>
 
 <router-outlet></router-outlet>
 
